# financial-fraud

./: .gitignore  Makefile  README.md  data_setup.py  pyproject.toml
app/: demo.py
eta/: warm_start_eta.json
jobs/: 00_data.py  10_backfill.py  20_train.py  30_promotion.py  data.py
notebooks/: eda.ipynb
parity/: contract.yaml  test.py  test2.py  test3.py
src/financial_fraud/: config.py  run_id.py
src/financial_fraud/data_layers/bronze/: ingest.py
src/financial_fraud/data_layers/gold/: as_of_now.sql  as_of_row.sql  features.sql  train.sql
src/financial_fraud/data_layers/silver/: base.sql  key.sql  label.sql
src/financial_fraud/db/: executor.py
src/financial_fraud/io/: atomic.py  hf.py  hf_run_metrics.py
src/financial_fraud/modeling/: class_weights.py  config.py  fit.py  gate_broken.py  splits.py  threshold.py
src/financial_fraud/modeling/bundle/: model_artifact.py  write_bundle.py  write_metadata.py  write_metrics.py  write_model.py
src/financial_fraud/modeling/feature_spec/: apply.py  feature_spec.json  feature_spec.py  load.py
src/financial_fraud/modeling/metrics/: registry.py  report.py
src/financial_fraud/modeling/preprocessors/: lr.py  tree.py
src/financial_fraud/modeling/trainers/: lgb_trainer.py  lr_trainer.py  make_trainer.py  xgb_trainer.py
src/financial_fraud/promotion/: best_candidate.py  decision.py  registry.py
src/financial_fraud/redis/: connect.py  entities.py  infra.py  lua_scripts.py  publisher.py  reader.py  update.lua  update.py  writer.py
src/financial_fraud/redis/lua/: add.lua  advance.lua  lua_scripts.py
src/financial_fraud/serving/: assemble_row.py  explain.py  gate.py  output.py  score.py  serve.py  startup.py  stream.py  transaction.py  validate.py  warm_start.py  warm_up_start_step.py
src/financial_fraud/serving/steps/: base.py  delta_features.py  dest_aggregates.py  entity_features.py  explain.py  factor_explanations.py  lua.py  tx_features.py  validate.py
src/financial_fraud/stream/: build_log.py  stream.py
