[project]
name = "financial-fraud"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "huggingface_hub>=0.34,<1.0",
  "pandas>=2.2,<2.3",
  "pyarrow>=22.0.0",
  "duckdb>=1.4.3",
  "redis>=7.1.0",
]

[project.optional-dependencies]
ml = [
  "scikit-learn==1.6.1",
  "xgboost==3.1.2",
  "lightgbm>=4.6.0",
  "joblib",
]

serving = [
  "streamlit>=1.52,<1.53",
  "streamlit-autorefresh==1.0.1",
]

explain = [
  "shap==0.50.0",
]

dev = [
  "jupyter",
  "ipykernel",
]

all = [
  "scikit-learn==1.6.1",
  "xgboost==3.1.2",
  "lightgbm>=4.6.0",
  "joblib",
  "streamlit>=1.52,<1.53",
  "streamlit-autorefresh==1.0.1",
  "shap==0.50.0",
  "jupyter",
  "ipykernel",
]