[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-fraud"
version = "0.1.0"
requires-python = ">=3.11,<3.14"

dependencies = [
  "huggingface_hub>=0.34,<1.0",

  "pandas>=2.2,<3",
  "pyarrow>=22,<25",

  "duckdb>=1.4,<2",
  "redis>=5,<6",

  "scikit-learn==1.6.1",
  "xgboost>=3.1,<4",
  "lightgbm>=4.6,<5",

  "joblib>=1.3,<2",

  "streamlit>=1.52,<2",
  "streamlit-autorefresh>=1.0,<2",

  "shap>=0.50,<1",
]
[project.optional-dependencies]

dev = [
  "jupyter",
  "ipykernel",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
financial_fraud = ["**/*.sql", "**/*.json"]